13种预订信息开发

--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -3,20 +3,57 @@
 <view class='container'>
   <!-- <view class='page_title'>预订信息</view> -->
   <view class='many'>
-    <view class='text'>选择使用时间</view>
+    <view class='text'>{{dateFr.getOrderPageUseDateText(goodsItem.goodsItemBase.subType)}}</view>
     <view class='date'>
       <picker mode='date' start='{{start_date}}' value='{{useData}}' bindchange="bindDateChange">
-        <view class='blue_text'>{{useData}}</view>
+        <view class='blue_text'>{{useData ||'选择' + dateFr.getOrderPageUseDateText(goodsItem.goodsItemBase.subType)}}</view>
       </picker>
       <view class='img_row'>
         <image src='../../img/common/more.png'></image>
       </view>
     </view>
   </view>
+  <view class='many' wx:if='{{goodsItem.goodsItemBase.subType === 31}}'>
+    <view class='text'>领取地点</view>
+    <view class='date'>
+      <picker mode='selector' range='{{goodsItem.goodsItemInfo.infoExt.address}}' value='{{orderTrafficMerch.upPlace}}' bindchange="bindReceivePlace">
+        <view class='blue_text'>{{orderTrafficMerch.upPlace ||'选择领取地点'}}</view>
+      </picker>
+      <view class='img_row'>
+        <image src='../../img/common/more.png'></image>
+      </view>
+    </view>
+  </view>
+  <view class='many' wx:if='{{goodsItem.goodsItemBase.subType === 11}}'>
+    <view class='text'>上车时间</view>
+    <view class='date'>
+      <picker mode='time' value='{{orderTravelMerch.upTime}}' bindchange="bindUpTimeChange">
+        <view class='blue_text'>{{orderTravelMerch.upTime ||'选择上车时间'}}</view>
+      </picker>
+      <view class='img_row'>
+        <image src='../../img/common/more.png'></image>
+      </view>
+    </view>
+  </view>
+  <view class='many' wx:if='{{goodsItem.goodsItemBase.subType === 11 || goodsItem.goodsItemBase.subType === 12}}'>
+    <view class='text'>上车地点</view>
+    <view class='upPlace'>
+      <input placeholder-class='phcolor' placeholder='请输入上车地点' value='{{orderTravelMerch.upPlace}}' bindinput='bindUpPlaceChange'></input>
+    </view>
+  </view>
+  <view class='many' wx:if='{{goodsItem.goodsItemBase.subType === 11}}'>
+    <view class='text'>下车地点</view>
+    <view class='downPlace'>
+      <input placeholder-class='phcolor' placeholder='请输入下车地点' value='{{orderTravelMerch.downPlace}}' bindinput='bindDownPlaceChange'></input>
+      <button bindtap='handleCopyUpPlace'>同上车地点</button>
+    </view>
+  </view>
   <view class='many'>
-    <view class='text'>份数</view>
+    <view class='text' wx:if='{{goodsItem.goodsItemBase.subType === 11}}'>所需车辆</view>
+    <view class='text' wx:if='{{goodsItem.goodsItemBase.subType === 12}}'>乘车人</view>
+    <view class='text' wx:if='{{goodsItem.goodsItemBase.subType === 31}}'>购买数量</view>
     <view class='copies'>
-      <view class='{{ minusStatus }}' bindtap='bindMinus'>
+      <view bindtap='bindMinus'>
         <view class='img_row'>
           <image src='../../img/common/reduce.png'></image>
         </view>
@@ -24,14 +61,14 @@
       <view>
         <input type='number' value='{{orderMerches.merchCount}}' bindchange='bindManual'></input>
       </view>
-      <view class='{{ maxusStatus }}' bindtap='bindPlus'>
+      <view bindtap='bindPlus'>
         <view class='img_row'>
           <image src='../../img/common/plus.png'></image>
         </view>
       </view>
     </view>
   </view>
-  <view class='many' wx:if='{{goodsItem.goodsItemBase.subType === 11 || goodsItem.goodsItemBase.subType === 33}}'>
+  <view class='many' wx:if='{{false}}'>
     <view class='tips'>安全座椅</view>
     <view class='text'>个数</view>
     <view class='copies'>
@@ -50,56 +87,75 @@
       </view>
     </view>
   </view>
-  <view class='single'>
-    <input placeholder-class='phcolor' value='{{receiver.name}}' placeholder='您的姓名' bindinput='handleInputName'></input>
-  </view>
-  <view class='single appellation'>
+  <view class='single appellation' wx:if='{{false}}'>
     <picker mode='selector' value='{{receiver.alias}}' range='{{genderRange}}' range-key='label' bindchange='bindGenderChange'>
-      <view class='{{receiver.alias ? "checked" : ""}}'>{{receiver.alias ? (receiver.alias === "gentleman" ? "先生" : "女士") : '称谓'}}</view>
+      <view class='{{receiver.alias ? "checked" : ""}}'>{{receiver.alias ? (receiver.alias === "gentleman" ? "先生" : "女士") :'称谓'}}</view>
     </picker>
     <view class='img_row'>
       <image src='../../img/common/more.png'></image>
     </view>
   </view>
-  <view class='single'>
-    <input type='number' placeholder-class='phcolor' value='{{receiver.phoneNo}}' placeholder='手机号码' bindinput='handleInputPhone'></input>
+  <view class='many'>
+    <view class='tips'>联系人</view>
+    <view class='text'>中文姓名</view>
+    <view class='cName'>
+      <input placeholder-class='phcolor' value='{{receiver.name}}' placeholder='中文姓名' bindinput='handleInputName'></input>
+      <button>转为英文姓名</button>
+    </view>
   </view>
-  <view class='single'>
-    <input placeholder-class='phcolor' value='{{receiver.email}}' placeholder='邮箱' bindinput='handleInputEmail'></input>
+  <view class='english_name'>
+    <view class='surname'>
+      <view class='text'>英文姓</view>
+      <view class='input_row'>
+        <input placeholder='英文姓' placeholder-class='phcolor' value='{{surname}}' data-type='1' bindinput='bindEnNameChange'></input>
+      </view>
+    </view>
+    <view class='en_name'>
+      <view class='text'>英文名</view>
+      <view class='input_row'>
+        <input placeholder='英文名' placeholder-class='phcolor' value='{{en_name}}' data-type='0' bindinput='bindEnNameChange'></input>
+      </view>
+    </view>
   </view>
-  <view class='single' wx:if='{{goodsItem.goodsItemBase.subType === 11 || goodsItem.goodsItemBase.subType === 12}}'>
-    <input placeholder-class='phcolor' value='{{merchSpecific}}' placeholder='接送点' bindinput='handleInputMerchSpecific'></input>
+  <view class='many'>
+    <view class='text'>手机号</view>
+    <view class='phoneNo'>
+      <input type='number' placeholder-class='phcolor' value='{{receiver.phoneNo}}' placeholder='手机号（以便紧急情况联系）' bindinput='handleInputPhone'></input>
+    </view>
   </view>
-  <view class='single' wx:if='{{false}}'>
-    <input placeholder-class='phcolor' placeholder='传真号'></input>
+  <view class='many'>
+    <view class='text'>邮箱</view>
+    <view class='email'>
+      <input placeholder-class='phcolor' value='{{receiver.email}}' placeholder='邮箱' bindinput='handleInputEmail'></input>
+    </view>
   </view>
   <view class='pickUp' wx:if='{{goodsItem.goodsItemBase.pickUpType}}'>
     <view class='tab-content'>
-      <view class='tab-text {{pickUpType === 1 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2}}' data-type='1' bindtap='handleUpdatePickUpType'>
+      <view class='tab-text {{pickUpType===1 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !==2 }}' data-type='1' bindtap='handleUpdatePickUpType'>
         自取
         <image src='../../img/order/detail_icon_bmline.png'></image>
       </view>
-      <view class='tab-text {{pickUpType === 0 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1}}' data-type='0' bindtap='handleUpdatePickUpType'>
+      <view class='tab-text {{pickUpType===0 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !==1 }}' data-type='0' bindtap='handleUpdatePickUpType'>
         邮寄
         <image src='../../img/order/detail_icon_bmline.png'></image>
       </view>
     </view>
-    <view class='self_taking' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2  && pickUpType === 1}}'>
+    <view class='self_taking' wx:if='{{goodsItem.goodsItemBase.pickUpType !==2 && pickUpType===1 }}'>
       <block wx:for='{{goodsItem.goodsItemInfo.pickUpAddress}}' wx:key='{{index}}'>
         <view class='radio_label' data-item='{{item}}' bindtap='handleChangeSelfTaking'>
           <view class='label'>{{item}}</view>
-          <view class='radio_border {{ self_taking === item ? "active" : ""}}'>
+          <view class='radio_border {{ self_taking===item ? "active" : ""}}'>
             <view class='radio'></view>
           </view>
         </view>
       </block>
     </view>
-    <view class='mail single' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1 && pickUpType === 0}}'>
+    <view class='mail single' wx:if='{{goodsItem.goodsItemBase.pickUpType !==1 && pickUpType===0 }}'>
       <input value='{{mail}}' placeholder-class='phcolor' placeholder='详细地址' bindinput='handleChangeInputMail'></input>
     </view>
   </view>
   <view class='many' wx:if='{{useData}}' bindtap='clickCouponLan'>
-    <view class='text'>可用优惠券</view>
+    <view class='text' style='width: 180rpx;'>可用优惠券</view>
     <view class='coupon'>
       <view class='blue_text' wx:if='{{!selectCoupon.id && coupons.length}}'>{{coupons.length}}张</view>
       <view class='blue_text' wx:if='{{selectCoupon.id}}'>{{selectCoupon.name}}</view>
@@ -123,7 +179,7 @@
               </view>
               <view class='worth'>
                 <view class='discount'>
-                  <block wx:if='{{item.type === 0}}'>
+                  <block wx:if='{{item.type===0 }}'>
                     <view class='num'>
                       <text>{{item.discount / 10}}</text>
                     </view>
@@ -131,7 +187,7 @@
                       <text>/折</text>
                     </view>
                   </block>
-                  <block wx:if='{{item.type === 1}}'>
+                  <block wx:if='{{item.type===1 }}'>
                     <view class='num'>
                       <text><text class='currency'>{{item.currency}}</text>{{item.reducePrice / 100}}</text>
                     </view>
@@ -139,14 +195,14 @@
                       <text>/满{{item.sourcePrice / 100}}</text>
                     </view>
                   </block>
-                  <block wx:if='{{item.type === 2}}'>
+                  <block wx:if='{{item.type===2 }}'>
                     <view class='num'>
                       <text><text class='currency'>{{item.currency}}</text>{{item.reducePrice / 100}}</text>
                     </view>
                   </block>
                 </view>
                 <view class='expiry_date'>
-                  <text>有效期至：{{dateFr.getDate(item.expireEndAt, '/')}}</text>
+                  <text>有效期至：{{dateFr.getDate(item.expireEndAt,'/')}}</text>
                 </view>
               </view>
             </view>
@@ -155,8 +211,8 @@
                 <text>{{item.name}}</text>
               </view>
               <view>
-                <image wx:if='{{selectCoupon.id !== item.id}}' src='../../img/order/pay_icon_check.png'></image>
-                <image wx:if='{{selectCoupon.id === item.id}}' src='../../img/order/pay_icon_checked.png'></image>
+                <image wx:if='{{selectCoupon.id !==item.id}}' src='../../img/order/pay_icon_check.png'></image>
+                <image wx:if='{{selectCoupon.id===item.id}}' src='../../img/order/pay_icon_checked.png'></image>
               </view>
             </view>
           </view>
